Fix book title in homepage

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: book
 
 book:
-  title: "esqLABS R Coding Practice"
+  title: "esqLABS R Coding Standards"
   reader-mode: true
 
   page-footer:
