Update authors in yaml file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ format:
       - esqlabs.scss
     code-link: true
 
-    author-meta: "Felix MIL, Tanya Zasedateleva"
+    author-meta: "Felix MIL, Diane Lefaudeux, Tanya Zasedateleva"
     callout-appearance: simple
 
 editor: visual
